--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,20 @@ body {
     #showcase-section h3 {
       font-size: 4rem; } }
 #card-section {
-  min-height: 20px; }
+  min-height: 20px;
+  background: #fff; }
 
 .mb-resp {
   margin-bottom: 1rem; }
+
+#about-section {
+  background: #f5f5f5; }
+
+#author-section img {
+  margin-top: -50px; }
+
+.card:hover {
+  background: #3292a6;
+  color: #fff; }
+  .card:hover .fa {
+    color: #fff; }
