--- a/scss/style.scss
+++ b/scss/style.scss
@@ -49,6 +49,7 @@ body {
 
 #card-section {
   min-height: 20px;
+  background: #fff;
 }
 
 // @media (max-width: 768px) {
@@ -59,4 +60,23 @@ body {
 
 .mb-resp {
   margin-bottom: 1rem;
+}
+
+#about-section {
+  background: #f5f5f5;
+}
+
+#author-section {
+  img {
+    margin-top: -50px;
+  }
+}
+
+.card:hover {
+  background: $primary;
+  color: #fff;
+
+  .fa {
+    color: #fff;
+  }
 }
